<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white_background"
    tools:context=".Page6">

    <TextView
        android:id="@+id/header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/blue_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/my_goals"
        android:textColor="@color/blue_app"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/banner_outline"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/banner_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/yellow_button_outline_bg">

            <ImageView
                android:id="@+id/image_view_goal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/goals_colour2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_current_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/blue_app"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toEndOf="@+id/image_view_goal"
                app:layout_constraintTop_toBottomOf="@+id/text_view_daily_goals" />

            <TextView
                android:id="@+id/text_view_daily_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/daily"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_goal"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_1"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/blue_button_bg"
        android:text="1"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/want_to"
        android:textColor="@color/blue_app"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner_outline" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/blue_button_bg"
        android:text="3"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_1"
        app:layout_constraintStart_toEndOf="@+id/button_1" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/blue_button_bg"
        android:text="5"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/blue_button_bg"
        android:text="10"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_5" />

    <Button
        android:id="@+id/button_10"
        android:layout_width="72dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/blue_button_bg"
        android:text="10"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/activities"
        android:textColor="@color/blue_app"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_daily"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/blue_button_bg"
        android:text="@string/daily"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button_weekly"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/blue_button_bg"
        android:text="@string/weekly"
        android:textColor="@color/blue_app"
        app:backgroundTint="#00FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_daily"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="152dp"
        android:text="@string/update"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_daily" />


</androidx.constraintlayout.widget.ConstraintLayout>