<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/nav_progress"
        android:icon="@drawable/user"
        android:title="@string/progress" />
    <item
        android:id="@id/nav_goals"
        android:icon="@drawable/goals"
        android:title="@string/goals" />
    <item
        android:id="@id/nav_home"
        android:icon="@drawable/homepage"
        android:title="@string/home" />
    <item
        android:id="@id/nav_dictionary"
        android:icon="@drawable/dictionary"
        android:title="@string/dictionary" />
    <item
        android:id="@id/nav_study"
        android:icon="@drawable/shuttle"
        android:title="@string/study" />

</menu>